--- a/main/style.scss
+++ b/main/style.scss
@@ -1,5 +1,79 @@
-h1 {
-  color: #ff0000;
-  margin: 0 auto;
-  width: 316px;
+@import "variables";
+@font-face {
+  font-family: Metropolis;
+  src: url(../assets//font/Metropolis-Regular.otf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: Metropolis;
+  src: url(../assets/font/Metropolis-Bold.otf);
+  font-weight: bold;
+}
+
+.horizontal-align {
+  margin-left: auto;
+  margin-right: auto;
+}
+.wrapper {
+  max-width: 1152px;
+  padding: 0 20px;
+}
+.inline-block {
+  display: inline-block;
+}
+.float-l {
+  float: left;
+}
+.float-r {
+  float: right;
+}
+// ******----styling-----*******//
+.top__header {
+  // position: fixed;
+  // width: 100%;
+  // top: 0;
+}
+.header__nav {
+  padding-top: 56px;
+  display: flex;
+}
+.logo__size {
+  width: 176px;
+  height: 49px;
+}
+.header__nav-holder {
+  margin-left: auto;
+}
+.header__nav-item {
+  font-size: map-get($font-size, fs-18);
+  // color: $header-nav-btn;
+  color: $header-nav-text;
+  // line-height: $lh-18;
+  line-height: map-get($line-height, lh-18);
+
+  &--active {
+    background-color: $header-nav-btn;
+    color: $secondary-text-color;
+    padding: 12px 20px 12px 22px;
+    border-radius: 20px;
+    margin-left: 53px;
+  }
+}
+.hero {
+  background-image: url(../assets/img/hero.png);
+  height: 100vh;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  &__content {
+    max-width: 798px;
+    text-align: center;
+  }
+  &__desc {
+    margin-top: 30px;
+    font-size: map-get($font-size, fs-26);
+    line-height: map-get($line-height, lh-40);
+    // line-height: $lh-40;
+  }
 }
