--- a/main/_variables.scss
+++ b/main/_variables.scss
@@ -3,15 +3,23 @@ $primary-text-color: #2f2d2d;
 $secondary-text-color: #ffffff;
 $header-nav-btn: #7f83ff;
 $header-nav-text: #434343;
+$hero-btn: #4a4edd;
+$warp-border: rgba(164, 164, 164, 0.329764);
+$light-blue: #7796fe;
+$circle-red: rgba(253, 94, 94, 0.2);
+$circle-green: rgba(73, 166, 82, 0.2);
 
 // FONT SIZE
 $font-size: (
   fs-18: 18px,
+  fs-22: 22px,
+  fs-25: 25px,
   fs-26: 26px,
 );
 
 // LINE HEIGTH
 $line-height: (
   lh-18: 18px,
+  lh-25: 25px,
   lh-40: 40px,
 );
