--- a/main/style.css
+++ b/main/style.css
@@ -25,8 +25,15 @@
 .float-r {
   float: right; }
 
+.top__header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 5;
+  background-color: #ffffff; }
+
 .header__nav {
-  padding-top: 56px;
+  padding: 25px 20px;
   display: flex; }
 
 .logo__size {
@@ -34,6 +41,7 @@
   height: 49px; }
 
 .header__nav-holder {
+  margin-top: 4px;
   margin-left: auto; }
 
 .header__nav-item {
@@ -49,14 +57,76 @@
 
 .hero {
   background-image: url(../assets/img/hero.png);
-  height: 100vh;
+  height: 130vh;
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: contain; }
   .hero__content {
     max-width: 798px;
-    text-align: center; }
+    text-align: center;
+    transform: translateY(50%); }
   .hero__desc {
     margin-top: 30px;
     font-size: 26px;
     line-height: 40px; }
+  .hero__btn-holder {
+    margin-top: 30px; }
+  .hero__btn {
+    font-size: 25px;
+    line-height: 25px;
+    padding: 15px 0;
+    width: 151px;
+    text-align: center;
+    border-radius: 8px; }
+  .hero__btn-bgcolor {
+    background-color: #4a4edd;
+    color: #ffffff;
+    margin-right: 32px; }
+  .hero__btn-border {
+    border: 2px solid #4a4edd;
+    color: #4a4edd; }
+
+.hire-warp {
+  padding: 179px 0 130px 0; }
+
+.warp__header {
+  max-width: 694px;
+  text-align: center;
+  font-size: 0;
+  margin-bottom: 179px; }
+
+.warp__nav {
+  margin-top: 46px; }
+
+.warp__nav-item {
+  font-size: 22px;
+  border-bottom: 3px solid rgba(164, 164, 164, 0.329764);
+  width: calc(100% / 3);
+  padding: 33px 0; }
+
+.nav-item__circle {
+  height: 47px;
+  width: 47px;
+  border-radius: 50px; }
+  .nav-item__circle-icon {
+    padding: 14px; }
+
+.nav-item__text {
+  font-size: 22px;
+  line-height: 25px;
+  margin: 23px; }
+
+.nav-item__circle-blue {
+  background-color: #7796fe; }
+
+.nav-item__text-blue {
+  color: #7796fe; }
+
+.nav-item__circle-red {
+  background-color: rgba(253, 94, 94, 0.2); }
+
+.nav-item__circle-green {
+  background-color: rgba(73, 166, 82, 0.2); }
+
+.warp__nav-item-blue {
+  border-bottom-color: #7796fe; }
