--- a/main/_variables.scss
+++ b/main/_variables.scss
@@ -8,6 +8,8 @@ $warp-border: rgba(164, 164, 164, 0.329764);
 $light-blue: #7796fe;
 $circle-red: rgba(253, 94, 94, 0.2);
 $circle-green: rgba(73, 166, 82, 0.2);
+$card-blue: #7796fe;
+$card-orange: rgba(255, 134, 91, 1);
 
 // FONT SIZE
 $font-size: (
@@ -21,5 +23,6 @@ $font-size: (
 $line-height: (
   lh-18: 18px,
   lh-25: 25px,
+  lh-31: 31px,
   lh-40: 40px,
 );
