--- a/main/style.scss
+++ b/main/style.scss
@@ -18,6 +18,10 @@
   max-width: 1152px;
   padding: 0 20px;
 }
+.container {
+  max-width: 1200px;
+  padding: 0 20px;
+}
 .inline-block {
   display: inline-block;
 }
@@ -132,6 +136,7 @@
   font-size: map-get($font-size, fs-22);
   line-height: map-get($line-height, lh-25);
   margin: 23px;
+  color: $primary-text-color;
 }
 .nav-item__circle-blue {
   background-color: $light-blue;
@@ -147,4 +152,52 @@
 }
 .warp__nav-item-blue {
   border-bottom-color: $light-blue;
+}
+.hire__bg-right {
+  background-image: url(../assets/img/Group145.png);
+  height: 608px;
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.hire__card-left {
+  margin-top: 40px;
+  clip-path: polygon(0 0, 100% 0, 96% 80%, 0 100%);
+  background-color: $card-blue;
+  width: 752px;
+  border-radius: 20px;
+}
+.hire__card-left-content {
+  width: 564px;
+  padding: 49px 0 98px 56px;
+  color: $secondary-text-color;
+  // filter: blur(62.5205px);
+}
+.hire__card-left-desc {
+  margin-top: 20px;
+  font-size: map-get($font-size, fs-18);
+  line-height: map-get($line-height, lh-31);
+}
+.hire__bg-left {
+  margin-top: 144px;
+  background-image: url(../assets/img/Group172.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  height: 768px;
+}
+.hire__card-right {
+  margin-top: 80px;
+  clip-path: polygon(13% 18%, 100% 0, 100% 100%, 0 100%);
+  background-color: $card-orange;
+  width: 709px;
+  border-radius: 20px;
+}
+.hire__card-right-content {
+  width: 591px;
+  padding: 153px 0 87px 122px;
+  color: $secondary-text-color;
+}
+.hire__card-right-desc {
+  margin-top: 20px;
+  font-size: map-get($font-size, fs-18);
+  line-height: map-get($line-height, lh-31);
 }
