--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   height: 100vh;
-  background-image: url(../assets/img/Group420.png);
+  background-image: url(assets/img/Group420.png);
   background-repeat: repeat-x;
   background-position: bottom left;
 
