--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -50,7 +50,7 @@
   border-bottom-color: $light-blue;
 }
 .hire__bg-right {
-  background-image: url(../assets/img/Group145.png);
+  background-image: url(assets/img/Group145.png);
   height: 608px;
   background-repeat: no-repeat;
   background-position: right;
@@ -76,7 +76,7 @@
 }
 .hire__bg-left {
   margin-top: 144px;
-  background-image: url(../assets/img/Group172.png);
+  background-image: url(assets/img/Group172.png);
   background-repeat: no-repeat;
   background-position: left;
   height: 768px;
@@ -120,7 +120,7 @@
   border-bottom-color: $circle-pink;
 }
 .work__bg-right {
-  background-image: url(../assets/img/Group163.png);
+  background-image: url(assets/img/Group163.png);
   height: 621px;
   background-repeat: no-repeat;
   background-position: right;
@@ -141,7 +141,7 @@
 }
 .work__bg-left {
   margin-top: 200px;
-  background-image: url(../assets/img/Group247.png);
+  background-image: url(assets/img/Group247.png);
   background-repeat: no-repeat;
   background-position: left;
   height: 802px;
