--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,6 +2,7 @@
 @import "abscracts/mixins";
 @import "abscracts/variables";
 @import "abscracts/map";
+@import "abscracts/function";
 
 // Core files
 @import "core/reset";
