--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,27 +1,49 @@
 .footer {
-  height: 100vh;
-  background-image: url(assets/img/Group420.png);
-  background-repeat: repeat-x;
-  background-position: bottom left;
+  height: 600px;
+  background-image: url(assets/img/footerbg.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
 
-  &__area {
-    display: flex;
+  @include breakpoint(footer-container) {
+    height: 700px;
   }
+
+  &__container {
+    @include breakpoint(footer-container) {
+      flex-direction: column;
+    }
+  }
+
   &__logo {
     flex-basis: 325px;
+
+    @include breakpoint(footer-container) {
+      flex-basis: 100px;
+      text-align: center;
+    }
+  }
+
+  &__nav-area {
+    @include breakpoint(footer-container) {
+      justify-content: space-around;
+    }
   }
 
   &__nav-holder {
-    flex-basis: 200px;
+    margin-right: 80px;
+
+    @include breakpoint(footer-container) {
+      margin-right: unset;
+    }
   }
   &__nav-heading {
-    font-size: map-get($font-size, fs-25);
+    font-size: font-size(fs-25);
     line-height: map-get($line-height, lh-30);
     margin-bottom: 35px;
     color: $primary-text-color;
   }
   &__nav-item {
-    font-size: map-get($font-size, fs-18);
+    font-size: font-size(fs-18);
     line-height: map-get($line-height, lh-35);
 
     &-link {
