--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -10,8 +10,11 @@
     text-align: center;
     transform: translateY(50%);
 
-    @include breakpoint(medium-screen) {
+    @include breakpoint(medium-largre-screen) {
       width: 500px;
+    }
+    @include breakpoint(medium-small-screen) {
+      width: 85%;
     }
   }
   &__heading {
