--- a/sass/abscracts/_map.scss
+++ b/sass/abscracts/_map.scss
@@ -1,22 +1,27 @@
 // FONT SIZE
 $font-size: (
   fs-0: 0,
+  fs-14: 14px,
+  fs-16: 16px,
   fs-18: 18px,
+  fs-20: 20px,
   fs-22: 22px,
   fs-25: 25px,
   fs-26: 26px,
+  fs-30: 30px,
 );
 
 // LINE HEIGTH
 $line-height: (
   lh-18: 18px,
+  lh-20: 20px,
+  lh-22: 22px,
   lh-25: 25px,
   lh-30: 30px,
   lh-31: 31px,
   lh-35: 35px,
   lh-40: 40px,
 );
-
 
 // BOX SHADOW
 $card-shadow: (
