--- a/main.css
+++ b/main.css
@@ -241,26 +241,40 @@ hr {
   background-color: #ffffff; }
 
 .header__nav {
-  padding: 25px 20px; }
+  padding: 25px 20px;
+  align-items: center; }
+  @media screen and (max-width: 500px) {
+    .header__nav {
+      padding: 15px; } }
 
 .logo__size {
   width: 176px;
   height: 49px; }
+  @media screen and (max-width: 500px) {
+    .logo__size {
+      width: 100px;
+      height: 28px; } }
 
 .header__nav-holder {
-  margin-top: 4px;
   margin-left: auto; }
 
 .header__nav-item {
   font-size: 18px;
   color: #434343;
   line-height: 18px; }
+  @media screen and (max-width: 500px) {
+    .header__nav-item {
+      font-size: 16px; } }
   .header__nav-item--active {
     background-color: #7f83ff;
     color: #ffffff;
     padding: 12px 20px 12px 22px;
     border-radius: 20px;
     margin-left: 53px; }
+    @media screen and (max-width: 500px) {
+      .header__nav-item--active {
+        margin-left: 20px;
+        padding: 10px 15px; } }
 
 .hero {
   background-image: url(assets/img/hero.png);
@@ -268,6 +282,9 @@ hr {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: contain; }
+  @media screen and (max-width: 500px) {
+    .hero {
+      height: 100vh; } }
   .hero__content {
     max-width: 798px;
     text-align: center;
@@ -278,15 +295,30 @@ hr {
     @media screen and (max-width: 780px) {
       .hero__content {
         width: 85%; } }
+    @media screen and (max-width: 500px) {
+      .hero__content {
+        transform: translateY(32%); } }
   .hero__heading {
     color: #2f2d2d; }
+    @media screen and (max-width: 500px) {
+      .hero__heading {
+        font-size: 30px;
+        line-height: 40px; } }
   .hero__desc {
     margin-top: 30px;
     color: #2f2d2d;
     font-size: 26px;
     line-height: 40px; }
+    @media screen and (max-width: 500px) {
+      .hero__desc {
+        margin-top: 25px;
+        font-size: 20px;
+        line-height: 30px; } }
   .hero__btn-holder {
     margin-top: 30px; }
+    @media screen and (max-width: 500px) {
+      .hero__btn-holder {
+        margin-top: 25px; } }
   .hero__btn {
     font-size: 25px;
     line-height: 25px;
@@ -294,6 +326,12 @@ hr {
     width: 151px;
     text-align: center;
     border-radius: 8px; }
+    @media screen and (max-width: 500px) {
+      .hero__btn {
+        font-size: 18px;
+        line-height: 20px;
+        padding: 12px 0;
+        width: 110px; } }
   .hero__btn-bgcolor {
     background-color: #4a4edd;
     color: #ffffff;
@@ -303,18 +341,27 @@ hr {
     color: #4a4edd; }
 
 .hire-warp {
-  margin: 179px 0 130px 0; }
+  padding: 179px 0 130px 0; }
+  @media screen and (max-width: 500px) {
+    .hire-warp {
+      padding: 80px 0 80px 0; } }
 
 .warp__header {
   max-width: 694px;
   text-align: center;
   margin-bottom: 179px; }
+  @media screen and (max-width: 500px) {
+    .warp__header {
+      margin-bottom: 80px; } }
 
 .warp__heading {
   color: #2f2d2d; }
 
 .warp__nav {
   margin-top: 46px; }
+  @media screen and (max-width: 500px) {
+    .warp__nav {
+      margin-top: 30px; } }
 
 .warp__nav-item {
   font-size: 22px;
@@ -326,13 +373,23 @@ hr {
   @media screen and (max-width: 780px) {
     .warp__nav-item {
       flex-flow: column; } }
+  @media screen and (max-width: 500px) {
+    .warp__nav-item {
+      padding: 0 0 15px 0; } }
 
 .nav-item__circle {
   height: 47px;
   width: 47px;
   border-radius: 50px; }
+  @media screen and (max-width: 500px) {
+    .nav-item__circle {
+      height: 42px;
+      width: 42px; } }
   .nav-item__circle-icon {
     padding: 14px; }
+    @media screen and (max-width: 500px) {
+      .nav-item__circle-icon {
+        padding: 12px; } }
 
 .nav-item__text {
   font-size: 22px;
@@ -341,7 +398,11 @@ hr {
   color: #2f2d2d; }
   @media screen and (max-width: 780px) {
     .nav-item__text {
-      margin: 23px 0 0 0; } }
+      margin: 18px 0 0 0; } }
+  @media screen and (max-width: 500px) {
+    .nav-item__text {
+      margin: 10px 0 0 0;
+      font-size: 18px; } }
 
 .nav-item__circle-blue {
   background-color: #7796fe; }
@@ -369,6 +430,10 @@ hr {
   @media screen and (max-width: 780px) {
     .hire__bg-right {
       background-size: 523px; } }
+  @media screen and (max-width: 500px) {
+    .hire__bg-right {
+      height: 520px;
+      background-size: 310px; } }
 
 .hire__card-left {
   clip-path: path("M0.0293706 21.0294C0.0131563 9.41993 9.41992 0 21.0294 0H728.117C740.782 0 750.565 11.1262 748.944 23.6867L715.555 282.518L23.6719 355.554C11.2823 356.862 0.484857 347.158 0.467457 334.699L0.0293706 21.0294Z");
@@ -383,6 +448,9 @@ hr {
       border-radius: 20px;
       height: unset;
       padding: 50px; } }
+  @media screen and (max-width: 500px) {
+    .hire__card-left {
+      padding: 25px; } }
 
 .hire__card-left-content {
   max-width: 564px;
@@ -391,10 +459,24 @@ hr {
     .hire__card-left-content {
       max-width: 100%; } }
 
+@media screen and (max-width: 780px) {
+  .card-heading {
+    line-height: 35px; } }
+
+@media screen and (max-width: 500px) {
+  .card-heading {
+    font-size: 22px;
+    line-height: 30px; } }
+
 .card-desc {
   margin-top: 20px;
   font-size: 18px;
   line-height: 31px; }
+  @media screen and (max-width: 500px) {
+    .card-desc {
+      font-size: 16px;
+      line-height: 22px;
+      margin-top: 15px; } }
 
 .hire__bg-left {
   margin-top: 144px;
@@ -410,6 +492,10 @@ hr {
     .hire__bg-left {
       background-size: 500px;
       height: 1120px; } }
+  @media screen and (max-width: 500px) {
+    .hire__bg-left {
+      background-size: 300px;
+      height: 800px; } }
 
 .hire__card-right {
   margin-top: 80px;
@@ -425,6 +511,10 @@ hr {
       width: 100%;
       height: unset;
       border-radius: 20px; } }
+  @media screen and (max-width: 500px) {
+    .hire__card-right {
+      margin-top: 60px;
+      padding: 25px; } }
 
 .hire__card-right-content {
   max-width: 539px;
@@ -443,6 +533,9 @@ hr {
   @media screen and (max-width: 1100px) {
     .work-warp {
       margin-bottom: 180px; } }
+  @media screen and (max-width: 500px) {
+    .work-warp {
+      margin-bottom: 80px; } }
 
 .nav-item__circle-pink {
   background-color: #fb1488; }
@@ -471,6 +564,10 @@ hr {
     .work__bg-right {
       height: 800px;
       background-size: 450px; } }
+  @media screen and (max-width: 500px) {
+    .work__bg-right {
+      height: 600px;
+      background-size: 320px; } }
 
 .work__card-left {
   clip-path: path("M29.3663 425.915C30.191 437.538 40.3202 446.267 51.9369 445.366L686.38 396.176C698.207 395.259 706.927 384.736 705.631 372.945L673.617 81.5993L24.3371 1.1398C11.2134 -0.486511 -0.128856 10.276 0.807213 23.4669L29.3663 425.915Z");
@@ -485,6 +582,9 @@ hr {
       width: 100%;
       height: unset;
       border-radius: 20px; } }
+  @media screen and (max-width: 500px) {
+    .work__card-left {
+      padding: 25px; } }
 
 .work__card-left-content {
   max-width: 490px;
@@ -507,6 +607,10 @@ hr {
     .work__bg-left {
       height: 1200px;
       background-size: 500px; } }
+  @media screen and (max-width: 500px) {
+    .work__bg-left {
+      height: 885px;
+      background-size: 300px; } }
 
 .work__card-right {
   margin-top: 80px;
@@ -522,6 +626,9 @@ hr {
       width: 100%;
       height: unset;
       border-radius: 20px; } }
+  @media screen and (max-width: 500px) {
+    .work__card-right {
+      padding: 25px; } }
 
 .work__card-right-content {
   max-width: 469px;
@@ -539,6 +646,11 @@ hr {
     color: #2f2d2d;
     font-size: 26px;
     line-height: 40px; }
+    @media screen and (max-width: 500px) {
+      .input-area__desc {
+        margin-top: 25px;
+        font-size: 20px;
+        line-height: 30px; } }
   .input-area__holder {
     margin-top: 40px;
     max-width: 85%;
