--- a/sass/abscracts/_mixins.scss
+++ b/sass/abscracts/_mixins.scss
@@ -2,7 +2,13 @@
   margin-top: 30px;
   color: $primary-text-color;
   font-size: font-size(fs-26);
-  line-height: map-get($line-height, lh-40);
+  line-height: line-height(lh-40);
+
+  @include breakpoint(small-screen) {
+    margin-top: 25px;
+    font-size: font-size(fs-20);
+    line-height: line-height(lh-30);
+  }
 }
 
 // BREAK POINTS
