--- a/main.css
+++ b/main.css
@@ -186,13 +186,16 @@ hr {
 
 .footer {
   height: 600px;
-  background-image: url(assets/img/footerbg.png);
+  background-image: url(assets/img/Group.png);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: contain; }
   @media screen and (max-width: 1006px) {
     .footer {
       height: 500px; } }
+  @media screen and (max-width: 500px) {
+    .footer {
+      height: 590px; } }
   @media screen and (max-width: 1006px) {
     .footer__container {
       flex-direction: column; } }
@@ -202,36 +205,64 @@ hr {
       .footer__logo {
         flex-basis: 100px;
         text-align: center; } }
+    @media screen and (max-width: 500px) {
+      .footer__logo {
+        flex-basis: 55px; } }
   @media screen and (max-width: 1006px) {
     .footer__nav-area {
       justify-content: space-around; } }
+  @media screen and (max-width: 500px) {
+    .footer__nav-area {
+      flex-direction: column;
+      text-align: center; } }
   .footer__nav-holder {
     margin-right: 80px; }
     @media screen and (max-width: 1006px) {
       .footer__nav-holder {
         margin-right: unset; } }
+    @media screen and (max-width: 500px) {
+      .footer__nav-holder {
+        margin-bottom: 25px; } }
   .footer__nav-heading {
     font-size: 25px;
-    line-height: 30px;
+    line-height: 31px;
     margin-bottom: 35px;
     color: #2f2d2d; }
+    @media screen and (max-width: 500px) {
+      .footer__nav-heading {
+        font-size: 22px;
+        line-height: 25px;
+        margin-bottom: 15px; } }
   .footer__nav-item {
     font-size: 18px;
     line-height: 35px; }
+    @media screen and (max-width: 500px) {
+      .footer__nav-item {
+        font-size: 14px;
+        line-height: 25px; } }
     .footer__nav-item-link {
       color: #2f281e; }
 
 .footer__nav-social-facebook {
   color: #4267b2;
   margin-right: 17px; }
+  @media screen and (max-width: 500px) {
+    .footer__nav-social-facebook {
+      margin-right: 4px; } }
 
 .footer__nav-social-twitter {
   color: #1da1f2;
   margin-right: 10px; }
+  @media screen and (max-width: 500px) {
+    .footer__nav-social-twitter {
+      margin-right: 4px; } }
 
 .footer__nav-social-instagram {
   color: #df0142;
   margin-right: 14px; }
+  @media screen and (max-width: 500px) {
+    .footer__nav-social-instagram {
+      margin-right: 4px; } }
 
 .top__header {
   position: fixed;
@@ -339,6 +370,92 @@ hr {
   .hero__btn-border {
     border: 2px solid #4a4edd;
     color: #4a4edd; }
+
+.input-area {
+  text-align: center;
+  margin-bottom: 108px; }
+  @media screen and (max-width: 500px) {
+    .input-area {
+      margin-bottom: 50px; } }
+  .input-area__desc {
+    max-width: 592px;
+    margin-top: 30px;
+    color: #2f2d2d;
+    font-size: 26px;
+    line-height: 40px; }
+    @media screen and (max-width: 500px) {
+      .input-area__desc {
+        margin-top: 25px;
+        font-size: 20px;
+        line-height: 30px; } }
+  .input-area__holder {
+    margin: 40px 0 106px 0;
+    justify-content: center; }
+    @media screen and (max-width: 500px) {
+      .input-area__holder {
+        flex-flow: column;
+        margin: 25px 0 25px 0; } }
+
+.input-field__holder {
+  flex-basis: 793px;
+  height: 95px;
+  background-color: rgba(216, 216, 216, 0.39);
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px; }
+  @media screen and (max-width: 780px) {
+    .input-field__holder {
+      height: 70px; } }
+  @media screen and (max-width: 500px) {
+    .input-field__holder {
+      flex-basis: 50px;
+      height: 45px;
+      border-radius: 8px; } }
+
+.input-field {
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  padding-left: 20px;
+  font-size: 22px; }
+  @media screen and (max-width: 780px) {
+    .input-field {
+      font-size: 20px; } }
+  @media screen and (max-width: 500px) {
+    .input-field {
+      font-size: 18px; } }
+
+.input-sumbit {
+  border: 0;
+  outline: 0;
+  font-size: 22px;
+  flex-basis: 283px;
+  background-color: #130242;
+  color: #ffffff;
+  border-radius: 8px;
+  cursor: pointer; }
+  @media screen and (max-width: 780px) {
+    .input-sumbit {
+      font-size: 20px;
+      flex-basis: 350px; } }
+  @media screen and (max-width: 500px) {
+    .input-sumbit {
+      flex-basis: 50px;
+      width: 50%;
+      margin: 25px auto 0 auto;
+      font-size: 18px; } }
+  .input-sumbit-icon {
+    margin-left: 26px; }
+    @media screen and (max-width: 780px) {
+      .input-sumbit-icon {
+        margin-left: 10px; } }
+    @media screen and (max-width: 500px) {
+      .input-sumbit-icon {
+        margin-left: 5px; } }
+
+.horizontal-line {
+  background-color: rgba(188, 208, 229, 0.496913); }
 
 .hire-warp {
   padding: 179px 0 130px 0; }
@@ -636,55 +753,3 @@ hr {
   @media screen and (max-width: 780px) {
     .work__card-right-content {
       max-width: 100%; } }
-
-.input-area {
-  text-align: center;
-  margin-bottom: 108px; }
-  .input-area__desc {
-    max-width: 592px;
-    margin-top: 30px;
-    color: #2f2d2d;
-    font-size: 26px;
-    line-height: 40px; }
-    @media screen and (max-width: 500px) {
-      .input-area__desc {
-        margin-top: 25px;
-        font-size: 20px;
-        line-height: 30px; } }
-  .input-area__holder {
-    margin-top: 40px;
-    max-width: 85%;
-    height: 95px;
-    background-color: rgba(216, 216, 216, 0.39);
-    text-align: left;
-    font-size: 0;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    margin-bottom: 106px; }
-
-.input-fild {
-  border: 0;
-  outline: 0;
-  width: 70%;
-  height: 100%;
-  background-color: transparent;
-  font-size: 22px;
-  padding-left: 20px; }
-
-.input-sumbit {
-  border: 0;
-  outline: 0;
-  width: 30%;
-  height: 100%;
-  background-color: #130242;
-  border-radius: 8px;
-  color: #ffffff;
-  font-size: 26px; }
-  .input-sumbit-icon {
-    margin-left: 26px; }
-    @media screen and (max-width: 1100px) {
-      .input-sumbit-icon {
-        margin-left: unset; } }
-
-.horizontal-line {
-  background-color: rgba(188, 208, 229, 0.496913); }
